workshop04/nwapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nwapp-deploy
   labels:
      app: northwind

spec:
   replicas: 2
   selector:
      #labels help the deployment identify which pod belongs to it.
      #all pods with label nwapp-pod will be managed by deployment with matchLabels: app: nwapp-pod
      matchLabels:
         app: nwapp-pod
   template:
      metadata:
         name: nwapp-pod 
         labels:
            app: nwapp-pod
      spec:
      #information from image(dockerfile)
         containers:
         - name: nwapp-container
           image: tanqiyang/nwapp:v1
           imagePullPolicy: IfNotPresent
           #setting env variable for container
           ports:
           - name: nwapp-port
             containerPort: 3000
           livenessProbe:
              initialDelaySeconds: 5
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              httpGet:
                 path: /health
                 port: nwapp-port
---
apiVersion: v1
kind: Service
metadata:
  name: nwapp-svc
  labels:
    app: northwind

spec:
  type: ClusterIP
  #type=LoadBalancer will provide both Cluster IP and a LoadBalancer
  #LoadBalancer is provided by the cloud
  #type: LoadBalancer
  selector:
    app: nwapp-pod
  ports:
  - name: app-port
    port: 8080
    targetPort: nwapp-port

#REFACTOR INGRESS TO ANOTHER FILE - nwapp-ing.yaml
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#    name: nwapp-ing
#    labels:
#       app: northwind
#    #from nginx ingress docs: https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/
#    annotations:
#       kubernetes.io/ingress.class: "nginx"
   
# spec:
#    rules:
#      #expose to ip of ingress kubectl.exe get svc -n nginx-ingress
#      #kubectl.exe get svc -n nginx-ingress
#    - host: "nwapp.167.172.6.64.nip.io"
#      http:
#          paths:
#          - path: /
#            backend:
#                #ingress routes to this the service 
#                serviceName: nwapp-svc
#                servicePort: app-port
