workshop04/nwdb.yaml
#we dont specify the namespace here, so when deploying, we need to specify the namespace
#kubectl.exe apply -f nwdb.yaml -n nwapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nwdb-deploy
   labels:
      app: northwind

#db should only have 1 replica. 2 databases will cause out of sync data, unless we use rsync
spec:
   replicas: 1
   selector:
      matchLabels:
         app: northwind-pod
   # pod template
   template: 
      metadata:
         name: nwdb-pod 
         labels:
            app: northwind-pod
      spec:
         #mounting the volume
         volumes:
         - name: mysql-vol
           persistentVolumeClaim:
            #from name in nwvolume.yaml
            claimName: nwdb-pvc
         #init container will mount volume into scrub and run busybox image and execute the below commands
         #this is to clean up the 'rubbish' after mounting (only occurs in digital ocean)
         containers:
         - name: northwind-container
           image: tanqiyang/nwdb:v1
           imagePullPolicy: IfNotPresent
           ports:
           - name: mysql-port
             containerPort: 3306

           volumeMounts:
           - name: mysql-vol
             #get from docker hub documentaion. Image-mysql https://hub.docker.com/_/mysql
             mountPath: var/lib/mysql
           #for livenessprobe, need to delete the yaml file before applying again
           livenessProbe:
              initialDelaySeconds: 15
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              exec:
                 command:
                 - bash
                 - -c
                 - "mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} || exit 1"

---
apiVersion: v1
kind: Service
metadata:
   name: nwdb-svc
   labels:
      app: northwind

spec:
   type: ClusterIP
   selector:
      #select the pod label (line 34)
      app: northwind-pod
   ports:
   - name: db-port
     #outer port
     port: 3306
     #target port is the pod's port
     targetPort: mysql-port
